--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2838,3 +2838,49 @@ body {
     width: 100% !important;
   }
 }
+.cid-r7PLDAXF9I {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
+}
+.cid-r7PLDAXF9I .line {
+  background-color: #ffffff;
+  color: #ffffff;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-r7PLDAXF9I .section-text {
+  padding: 2rem 0;
+}
+.cid-r7PLDAXF9I .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-r7PLDAXF9I .inner-container {
+    width: 100% !important;
+  }
+}
+.cid-r7PLxJAscO {
+  background: #ffffff;
+}
+.cid-r7PLxJAscO .image-block {
+  margin: auto;
+  width: 100% !important;
+}
+.cid-r7PLxJAscO .mbr-figure {
+  margin: 0 auto;
+}
+.cid-r7PLxJAscO figcaption {
+  position: relative;
+}
+.cid-r7PLxJAscO figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-r7PLxJAscO .image-block {
+    width: 100% !important;
+  }
+}
