--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1791,7 +1791,7 @@ body {
 .cid-r7OKmNBFso .card-wrapper {
   height: 100%;
   padding-bottom: 2rem;
-  background: #cccccc;
+  background: #89d5c9;
   box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
   transition: box-shadow 0.3s;
 }
@@ -1832,7 +1832,7 @@ body {
 .cid-r7ON4dWETM .card-wrapper {
   height: 100%;
   padding-bottom: 2rem;
-  background: #cccccc;
+  background: #89d5c9;
   box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
   transition: box-shadow 0.3s;
 }
